# slack-bot

./: .gitignore  .tmuxinator.yml  Dockerfile  LICENSE  README.md  alembic.ini  docsy.json  docsy_ai.py  docsy_bot.py  docsy_git.py  docsy_slack.py  documentation_assistant.py  flake.nix  git.py  github_manager.py  justfile  manifest-dev.yml  manifest-prod.yml  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py  shell.nix
.github/workflows/: build_image.yaml
alembic/: env.py
alembic/versions/: efbf4104118e_insert_customers.py
docsy/: __init__.py  ai.py  alembic.ini  dashboard.py  database.py  documentation_assistant.py  github_bot.py  github_manager.py  main.py  pull_request_bot.py  shared.py  slack_bot.py  urls.py
docsy/alembic/: env.py
docsy/alembic/versions/: 4a60cab87218_create_base_branch_column.py  6c9ea534b253_create_base_branch_column.py  ea0102c1f7f0_add_new_front_matter_and_blacklist_.py  efbf4104118e_insert_customers.py
docsy/api/: api.py  model.py
docsy/api/test/: api_test.py
docsy/cli/: ai.py  cli.py
docsy/cli/model/: commit.py  prompt.py  repo.py
docsy/cli/utils/: settings.py
docsy/dashboard/: dashboard.py
docsy/dashboard/templates/: index.html
docsy/engine/: __init__.py  ai.py  alembic.ini  coder.py  coderv2.py  github_manager.py  scraper.py  slack_ai.py
docsy/engine/ai/: __init__.py  analyze.py  base.py  test_analyze.py
docsy/engine/alembic/: env.py
docsy/engine/alembic/versions/: 4a60cab87218_create_base_branch_column.py  9d45975b880d_create_events_table.py  efbf4104118e_insert_customers.py
docsy/github-bot/: github-bot.py
docsy/listeners/: __init__.py
docsy/listeners/actions/: __init__.py  app_home_update.py  create_pr.py
docsy/listeners/events/: __init__.py  app_home_opened.py  app_mention.py
docsy/listeners/messages/: __init__.py  message_learned.py
docsy/listeners/views/: app_home.py
docsy/model/: Commit.py  GitRepository.py  Prompt.py  repo.py
docsy/slack/: slack.py
docsy/slack/listeners/: __init__.py
docsy/slack/listeners/actions/: __init__.py  app_home_update.py  create_pr.py
docsy/slack/listeners/events/: __init__.py  app_home_opened.py  app_mention.py
docsy/slack/listeners/messages/: __init__.py
docsy/slack/listeners/views/: __init__.py  app_home.py
docsy/utils/: error.py
docsy_server/api/: api.py  context.py  state.py
docsy_server/api/test/: api_test.py
docsy_server/engine/: __init__.py  ai.py  alembic.ini  coder.py  github_manager.py  shared.py
docsy_server/engine/alembic/: env.py
docsy_server/engine/alembic/versions/: efbf4104118e_insert_customers.py
docsy_server/github/: github.py
docsy_server/slack/: slack.py
docsy_server/slack/listeners/: __init__.py
test-cases/: bb-execution-users.txt  bb-executions.txt  kraken-api.txt  meshstack-preconditions.txt  move-project.txt
(+7 files in other folders)
